// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'long enough (1) - single line with no…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        [\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`]: true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'long enough (2) - single line with sp…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        [\` lorem ipsum dolor sit amet consectetur adipiscing elit
        proin ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque \`]: true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'long enough (3) - multiple lines' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        [\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere eu volutpat id neque
        pellentesque\`]: true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'near boundary (1) - single line with …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        "lorem ipsum dolor sit amet consectetur adipiscing elit proin": true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'near boundary (2) - single line with …' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        [\` lorem ipsum dolor sit amet consectetur adipiscing elit
        proin \`]: true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'near boundary (3) - multiple lines' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        "lorem ipsum dolor sit amet consectetur adipiscing elit proin": true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'short enough (1) - single line with n…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        "lorem ipsum dolor sit amet": true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'short enough (2) - single line with s…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        " lorem ipsum dolor sit amet ": true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'short enough (3) - multiple lines' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={classNames({
        "lorem ipsum dolor sit amet": true,
      })}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'syntax variants (1) - component' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <Box
      class={classNames({
        [\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
        ex massa hendrerit eu posuere\`]: true,
      })}
    >
      <slot />
    </Box>
  </div>
</div>
"
`;

exports[`'syntax variants (2) - \`class:list\` di…' > expectation 1`] = `
"//----------------------------------------------------------|
printWidth=60 (in snapshot)
<div>
  <div>
    <div
      class:list={[
        {
          [\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
          ex massa hendrerit eu posuere\`]: true,
        },
        {
          [\`lorem ipsum dolor sit amet consectetur adipiscing elit proin
          ex massa hendrerit eu posuere\`]: true,
        },
      ]}
    >
      <slot />
    </div>
  </div>
</div>
"
`;
